--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,16 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+/lib/
+/libs/
+.idea/
+.svn/
+.settings/
+.DS_Store/
+*.iml
+overlays/
+target/
+output/
+logs/
+catalina.base_IS_UNDEFINED/
+.classpath
+.project
+svnbuild.xml
+app.pid
